src/index.css
:root {
  --sidebar-background-color: rgb(33, 29, 43);
  --main-background-color: rgb(19, 17, 24);
  --scrollbar-width: 4px;
  --sidebar-item-background-color: rgb(19, 17, 25);
  --sidebar-item-open-background-color: rgba(19, 17, 25, 0.7);
  --sidebar-item-hover-border-color: rgb(64, 58, 86);
  --sidebar-item-hover-background-color: rgb(36, 33, 48);
  --sidebar-bottom-background-color: rgb(12, 11, 15);
  --sidebar-padding: 13px;
  --black-background-container-zindex: 10;
  --algo-calc-modal-background-color: rgb(33, 29, 43);

  --font-code: "JetBrains Mono", monospace;
  --font-code-size: 85%;

  --modal-bg-color: rgb(30, 25, 37);
  --modal-border-color: rgb(42, 36, 51);
}

*:disabled {
  cursor: not-allowed !important;
  opacity: 0.3;
}

body {
  margin: 0;
  padding: 0;
  font-family: Roboto, Arial, Helvetica, sans-serif;
}

input,
textarea,
button,
select {
  font-family: inherit;
}

/* 
 * We cannot use `hidden` or `display:none` on required inputs 
 * because the browser must be able to "focus" them if the validation fails.
 * Instead, we visually hide the input while keeping it accessible 
 * and focusable for the browser and screen readers.
 */
.hidden-styled-file-input {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}

/* Scroll bar */
::-webkit-scrollbar {
  width: var(--scrollbar-width);
  height: var(--scrollbar-width);
  transition: background-color 300ms;
}

::-webkit-scrollbar-thumb {
  cursor: default !important;
  background-color: rgba(120, 105, 133, 0.5);
  border-radius: 4px;
  transition: background-color 300ms;
}

::-webkit-scrollbar-thumb:hover {
  background-color: rgba(93, 81, 104, 0.5);
}

